--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^11.0.5",
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/typeorm": "^11.0.0",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "mysql2": "^3.12.0",
     "reflect-metadata": "^0.2.2",
@@ -40,6 +41,7 @@
     "@nestjs/testing": "^11.0.5",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.9",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
