--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,8 +11,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^4.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
