--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -35,6 +35,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.2.2",
+    "util": "^0.12.5",
     "vite": "^5.3.4"
   }
 }
