--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,12 +11,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@tailwindcss/vite": "^4.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
-    "tailwindcss": "^4.0.2"
+    "tailwindcss": "^4.0.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
