refactor tsconfig.json

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -11,10 +11,10 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
+    "strict": false,
     "skipLibCheck": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
-    "noImplicitAny": true,
     "strictBindCallApply": true,
     "noFallthroughCasesInSwitch": false,
     "strictFunctionTypes": true,
