--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
     "reflect-metadata": "^0.2.2",
@@ -53,6 +54,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.10",
     "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.2",
