--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^11.0.5",
     "@nestjs/event-emitter": "^3.0.0",
     "@nestjs/platform-express": "^11.0.5",
+    "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/typeorm": "^11.0.0",
     "bcryptjs": "^2.4.3",
