--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -34,9 +34,11 @@
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.9.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
+    "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
@@ -58,6 +60,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.10",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdf-parse": "^1.1.4",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
