refactor tsconfig app and test json file and add moduleMapper in jest to understand the new path

--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -11,7 +11,7 @@
       "@components/*": ["./src/components/*"],
       "@store/*": ["./src/store/*"],
       "@util/*": ["./src/util/*"],
-      "@pages/*": ["./src/pages/*"]
+      "@pages/*": ["./src/pages/*"],
     },
 
     /* Bundler mode */
